syntax = "proto3";

package loco.user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/loco-team/loco/shared/proto/user/v1;userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int64 id = 1;
  string external_id = 2;
  string email = 3;
  string avatar_url = 4;
  string name = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
  string external_id = 1;
  string email = 2;
  optional string name = 3;
  optional string avatar_url = 4;
}

message CreateUserResponse {
  User user = 1;
  string message = 2;
}

message GetUserRequest {
  optional int64 user_id = 1;
  optional string email = 2;
}

message GetUserResponse {
  User user = 1;
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 user_id = 1;
  optional string avatar_url = 2;
}

message UpdateUserResponse {
  User user = 1;
  string message = 2;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int64 total_count = 2;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  User user = 1;
  string message = 2;
}
